--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Fondation Bioénergie</title>
+  <title>Fondation Bioenergia</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -57,18 +57,18 @@
             <nav class="navbar navbar-default">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
+                <img class="bioenergia-logo-mobile" src="img/logo60-37.png" />
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".bs-example-navbar-collapse-1" aria-expanded="false">
-										<span class="sr-only">Toggle navigation</span>
-										<span class="icon-bar"></span>
-										<span class="icon-bar"></span>
-										<span class="icon-bar"></span>
-									</button>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
                 <!-- Brand -->
                 <a class="navbar-brand page-scroll sticky-logo" href="index.html">
-                  <h1>Fondation <span>Bioénergie</span></h1>
+                  <h1>Fondation <span>Bioenergia</span></h1>
                   <!-- Uncomment below if you prefer to use an image logo -->
-                  <!-- <img src="img/logo.png" alt="" title=""> -->
-								</a>
+                </a>
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
@@ -80,7 +80,7 @@
                     <a class="page-scroll" href="#about">À propos</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="#about">Dons</a>
+                    <a class="page-scroll" href="http://bioenergiehaiti.org/don">Dons</a>
                   </li>
                   <li>
                     <a class="page-scroll" href="#team">Conseil</a>
@@ -122,7 +122,7 @@
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs" >
                   <a class="ready-btn right-btn page-scroll" href="#services">Nous contacter</a>
-                  <a class="ready-btn page-scroll" href="#about">Faire un don</a>
+                  <a class="ready-btn page-scroll" href="http://bioenergiehaiti.org/don">Faire un don</a>
                 </div>
               </div>
             </div>
@@ -139,7 +139,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="section-headline text-center">
-            <h2>Fondation Bioénergie</h2>
+            <h2>Fondation Bioenergia</h2>
           </div>
         </div>
       </div>
@@ -149,8 +149,8 @@
           <div class="well-left">
             <div class="single-well">
               <a href="#">
-								  <img src="img/about/1.jpg" alt="">
-								</a>
+                  <img src="img/about/1beh.jpg" alt="">
+                </a>
             </div>
           </div>
         </div>
@@ -159,26 +159,17 @@
           <div class="well-middle">
             <div class="single-well">
               <a href="#">
-                <h4 class="sec-head">project Maintenance</h4>
+                <h4 class="sec-head">La Fondation Bioenergia a pour mission de soutenir des projets d'énergie propre et de valorisation des matières résiduelles dans les pays en voie de développement.</h4>
               </a>
               <p>
-                Redug Lagre dolor sit amet, consectetur adipisicing elit. Itaque quas officiis iure aspernatur sit adipisci quaerat unde at nequeRedug Lagre dolor sit amet, consectetur adipisicing elit. Itaque quas officiis iure
+                Ces pays sont les plus pénalisés par les changements climatiques et souffrent d'un manque chronique de financement des opérations de gestion des matières résiduelles, entraînant d'importants impacts sur la santé et l'économie de leurs populations, et sur l'environnement en général. Voilà pourquoi la Fondation appuie en particulier les projets de valorisation énergétique des matières résiduelles.
               </p>
               <ul>
                 <li>
-                  <i class="fa fa-check"></i> Interior design Package
+                  <i class="fa fa-check"></i> Projets concrets sur le terrain
                 </li>
                 <li>
-                  <i class="fa fa-check"></i> Building House
-                </li>
-                <li>
-                  <i class="fa fa-check"></i> Reparing of Residentail Roof
-                </li>
-                <li>
-                  <i class="fa fa-check"></i> Renovaion of Commercial Office
-                </li>
-                <li>
-                  <i class="fa fa-check"></i> Make Quality Products
+                  <i class="fa fa-check"></i> Infrastructure durable pour la communauté
                 </li>
               </ul>
             </div>
@@ -206,31 +197,31 @@
             <div class="single-team-member">
               <div class="team-img">
                 <a href="#">
-										<img src="img/team/1.jpg" alt="">
-									</a>
+                    <img src="img/team/avatar.jpg" alt="">
+                  </a>
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
                       <a href="#">
-													<i class="fa fa-facebook"></i>
-												</a>
+                          <i class="fa fa-facebook"></i>
+                        </a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-twitter"></i>
-												</a>
+                          <i class="fa fa-twitter"></i>
+                        </a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-instagram"></i>
-												</a>
+                          <i class="fa fa-instagram"></i>
+                        </a>
                     </li>
                   </ul>
                 </div>
               </div>
               <div class="team-content text-center">
-                <h4>Jhon Mickel</h4>
-                <p>Seo</p>
+                <h4>À venir</h4>
+                <p>À venir</p>
               </div>
             </div>
           </div>
@@ -239,31 +230,31 @@
             <div class="single-team-member">
               <div class="team-img">
                 <a href="#">
-										<img src="img/team/2.jpg" alt="">
-									</a>
+                    <img src="img/team/avatar.jpg" alt="">
+                  </a>
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
                       <a href="#">
-													<i class="fa fa-facebook"></i>
-												</a>
+                          <i class="fa fa-facebook"></i>
+                        </a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-twitter"></i>
-												</a>
+                          <i class="fa fa-twitter"></i>
+                        </a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-instagram"></i>
-												</a>
+                          <i class="fa fa-instagram"></i>
+                        </a>
                     </li>
                   </ul>
                 </div>
               </div>
               <div class="team-content text-center">
-                <h4>Andrew Arnold</h4>
-                <p>Web Developer</p>
+                <h4>À venir</h4>
+                <p>À venir</p>
               </div>
             </div>
           </div>
@@ -272,31 +263,31 @@
             <div class="single-team-member">
               <div class="team-img">
                 <a href="#">
-										<img src="img/team/3.jpg" alt="">
-									</a>
+                    <img src="img/team/avatar.jpg" alt="">
+                  </a>
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
                       <a href="#">
-													<i class="fa fa-facebook"></i>
-												</a>
+                          <i class="fa fa-facebook"></i>
+                        </a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-twitter"></i>
-												</a>
+                          <i class="fa fa-twitter"></i>
+                        </a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-instagram"></i>
-												</a>
+                          <i class="fa fa-instagram"></i>
+                        </a>
                     </li>
                   </ul>
                 </div>
               </div>
               <div class="team-content text-center">
-                <h4>Lellien Linda</h4>
-                <p>Web Design</p>
+                <h4>À venir</h4>
+                <p>À venir</p>
               </div>
             </div>
           </div>
@@ -305,31 +296,31 @@
             <div class="single-team-member">
               <div class="team-img">
                 <a href="#">
-										<img src="img/team/4.jpg" alt="">
-									</a>
+                    <img src="img/team/avatar.jpg" alt="">
+                  </a>
                 <div class="team-social-icon text-center">
                   <ul>
                     <li>
                       <a href="#">
-													<i class="fa fa-facebook"></i>
-												</a>
+                          <i class="fa fa-facebook"></i>
+                        </a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-twitter"></i>
-												</a>
+                          <i class="fa fa-twitter"></i>
+                        </a>
                     </li>
                     <li>
                       <a href="#">
-													<i class="fa fa-instagram"></i>
-												</a>
+                          <i class="fa fa-instagram"></i>
+                        </a>
                     </li>
                   </ul>
                 </div>
               </div>
               <div class="team-content text-center">
-                <h4>Jhon Powel</h4>
-                <p>Seo Expert</p>
+                <h4>À venir</h4>
+                <p>À venir</p>
               </div>
             </div>
           </div>
@@ -349,7 +340,7 @@
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="copyright text-center">
               <p>
-                &copy; Copyright <strong>eBusiness</strong>. All Rights Reserved
+                &copy; Copyright <strong>Fondation Bioenergia</strong>.
               </p>
             </div>
             <div class="credits">
