--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                   <li>
                     <a class="page-scroll" href="http://bioenergiehaiti.org/don">Dons</a>
                   </li>
-                  <li>
+                  <!--<li>
                     <a class="page-scroll" href="#team">Conseil</a>
-                  </li>
+                  </li>-->
                 </ul>
               </div>
               <!-- navbar-collapse -->
@@ -182,7 +182,7 @@
   <!-- End About area -->
 
   <!-- Start team Area -->
-  <div id="team" class="our-team-area area-padding">
+  <!--<div id="team" class="our-team-area area-padding">
     <div class="container">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -225,7 +225,6 @@
               </div>
             </div>
           </div>
-          <!-- End column -->
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="single-team-member">
               <div class="team-img">
@@ -258,7 +257,6 @@
               </div>
             </div>
           </div>
-          <!-- End column -->
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="single-team-member">
               <div class="team-img">
@@ -291,7 +289,6 @@
               </div>
             </div>
           </div>
-          <!-- End column -->
           <div class="col-md-3 col-sm-3 col-xs-12">
             <div class="single-team-member">
               <div class="team-img">
@@ -324,11 +321,11 @@
               </div>
             </div>
           </div>
-          <!-- End column -->
         </div>
       </div>
     </div>
   </div>
+  -->
   <!-- End Team Area -->
 
 
