https://github.com/alberto56/beh-suivi/issues/524 Add admin@fondationbioenergia.org to Fondation website

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                     <a class="page-scroll" href="#about">À propos</a>
                   </li>
                   <li>
+                    <a class="page-scroll" href="#contact">Contact</a>
+                  </li>
+                  <li>
                     <a class="page-scroll" href="http://bioenergiehaiti.org/don">Dons</a>
                   </li>
                   <!--<li>
@@ -121,7 +124,7 @@
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs" >
-                  <a class="ready-btn right-btn page-scroll" href="#services">Nous contacter</a>
+                  <a class="ready-btn right-btn page-scroll" href="#contact">Nous contacter</a>
                   <a class="ready-btn page-scroll" href="http://bioenergiehaiti.org/don">Faire un don</a>
                 </div>
               </div>
@@ -180,6 +183,25 @@
     </div>
   </div>
   <!-- End About area -->
+
+  <div id="contact" class="area-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="section-headline text-center">
+            <h2>Contact</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="text-center">
+            <p>Contactez-nous à l'adresse courriel <a href="mailto:admin@fondationbioenergia.org">admin@fondationbioenergia.org</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Start team Area -->
   <!--<div id="team" class="our-team-area area-padding">
